# foamer-firmware

./: .dockerignore  .env  Cargo.toml  Dockerfile
.cargo/: config.toml
.github/workflows/: build.yml  cli.yml  firmware.yml  web.yml
.husky/: pre-commit
foamer-cli/: Cargo.toml
foamer-cli/src/: main.rs
foamer-configurator/: .cta.json  Cargo.toml  LICENSE-MIT  biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  wrangler.jsonc
foamer-configurator/src/: lib.rs  main.tsx  routeTree.gen.ts  router.tsx  styles.css  wasm.ts
foamer-configurator/src/components/: AddressSelector.tsx  ConnectButton.tsx  Consist.tsx  ErrorBanner.tsx  FileButton.tsx  FunctionGroup.tsx  Header.tsx  WiThrottleConfig.tsx  WifiConfig.tsx
foamer-configurator/src/routes/: __root.tsx  index.tsx
foamer-configurator/src/stores/: configStore.ts  deviceStore.ts  errorStore.ts
foamer-firmware/: .gitignore  Cargo.toml  Embed.toml  Makefile.toml  build.rs  deny.toml  memory.x
foamer-firmware/src/: buf_reader.rs  flash.rs  main.rs  profile_usb.rs  string_collection.rs  triple_switch.rs  withrottle.rs
foamer-types/: Cargo.toml
foamer-types/src/: lib.rs  profile_usb_types.rs
src/: buf_reader.rs  flash.rs  main.rs  peek.rs  profile.rs  profile_usb.rs  profile_usb_types.rs  rotary_switch.rs  triple_switch.rs  withrottle.rs
