[package]
name = "foamer-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
foamer-types = { version = "0.1.0", path = "../foamer-types" }
nusb = "0.2.3"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = "1.0.228"
serde_json = "1.0.150"
serde_path_to_error = "0.1.20"
