[package]
name = "foamer-configurator"
version = "0.1.0"
authors = ["Mary Strodl <ipadlover8322@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
postcard = { version = "1.1.3", features = ["alloc", "heapless", "use-std"] }
foamer-types = { version = "0.1.0", path = "../foamer-types" }
serde_json = "1.0.150"
serde = "1.0.228"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
