[package]
edition = "2024"
name = "foamer-firmware"
version = "0.1.0"
license = "MIT OR Apache-2.0"

publish = false

[dependencies]
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-net = { version = "0.9.1", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-futures = "0.1.2"
cyw43 = { version = "0.7.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.10.0", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = { version = "1.0.0" } #, features = ["disable-blocking-mode"] }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = { version = "0.9.2", features = ["serde"] }

serde = { version = "1.0.203", default-features = false, features = ["derive"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
static_cell = "2.1"
rand = { version = "0.9.0", default-features = false }
embedded-nal-async = "0.9.0"
base16ct = "1.0.0"
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
defmt-serial = "0.13.0"
embassy-usb = { version = "0.6.0", features = ["defmt"] }
postcard = { version = "1.1.3", default-features = false, features = ["heapless", "use-defmt"] }
foamer-types = { version = "0.1.0", path = "../foamer-types", features = ["defmt"] }
