[package]
name = "foamer-types"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt = "1.0.1"
heapless = { version = "0.9.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
