[package]
name = "foamer-types"
version = "0.1.0"
edition = "2024"

[features]
defmt = ["dep:defmt"]

[dependencies]
defmt = { version = "1.0.1", optional = true }
heapless = { version = "0.9.2", features = ["serde"] }
postcard = { version = "1.1.3", default-features = false }
serde = { version = "1.0.228", features = ["derive"], default-features = false }
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
